@@ -1,6 +1,7 @@
 Version 0.2.0 (2014-xx-xx)
 --------------------------
-Link the Technical Docs and Setup Guide images to the appropriate pages (#60)
+Made unrequired tracker method arguments optional (#40) (TODO)
+Linked the Technical Docs and Setup Guide images to the appropriate pages (#60)
 Changed API to no longer specify a collector URL option (#57) 
 Removed the "URL from Cloudfront subdomain" option (#56)
 Started sending event vendor parameter through on querystring (#55)
